Align products in search with product list
